# immich-analyze

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh  flake.nix  install-systemd.sh  setup.sh  uninstall-systemd.sh
.github/workflows/: docker-publish.yml
locales/: app.yaml
src/: args.rs  config.rs  database.rs  error.rs  file_processing.rs  llamacpp.rs  main.rs  monitor.rs  ollama.rs  progress.rs  utils.rs
