[package]
name = "immich-analyze"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
notify = "8.2"
once_cell = "1.21"
regex = "1.12"
reqwest = { version = "0.12", features = ["json"] }
rust-i18n = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "signal", "macros"] }
tokio-postgres = "0.7"
uuid = { version = "1.19", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
opt-level = 3
